Changed GC settings to avoid issue with Java 10